tests/invalid/undefined_variable.cl
class Main {
   main(): Int {
       y <- 3;  -- `y` was never declared
       y
   };
};
